--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,4 +35,8 @@
       </section>
     </div>
   </body>
+  
 </html>
+
+<script type="text/javascript" async
+ src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-MML-AM_CHTML"></script>
